force-app/main/default/objects/Account/fields/AdClicksRolling30__c.field-meta.xml
<CustomField>
    <fullName>AdClicksRolling30__c</fullName>
    <label>Ad Clicks (30 Day Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>