force-app/main/default/objects/Account/fields/AdClicksRolling90__c.field-meta.xml
<CustomField>
    <fullName>AdClicksRolling90__c</fullName>
    <label>Ad Clicks (90 Day Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>