force-app/main/default/objects/Account/fields/AdDataUpToDateAsOf__c.field-meta.xml
<CustomField>
    <fullName>AdDataUpToDateAsOf__c</fullName>
    <label>Last Ad Impression Date</label>
    <type>Date</type>
</CustomField>