force-app/main/default/objects/Account/fields/AdImpressionsRolling30__c.field-meta.xml
<CustomField>
    <fullName>AdImpressionsRolling30__c</fullName>
    <label>Ad Impressions (30 Day Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>