force-app/main/default/objects/Account/fields/AdImpressionsRolling90__c.field-meta.xml
<CustomField>
    <fullName>AdImpressionsRolling90__c</fullName>
    <label>Ad Impressions (90 Day Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>