force-app/main/default/objects/Account/fields/AdSpendMtD__c.field-meta.xml
<CustomField>
    <fullName>AdSpendMtD__c</fullName>
    <label>AdSpendMtD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>