force-app/main/default/objects/Account/fields/AdSpendQtD__c.field-meta.xml
<CustomField>
    <fullName>AdSpendQtD__c</fullName>
    <label>AdSpendQtD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>