force-app/main/default/objects/Account/fields/alycecom__Initial_Gift_Invitation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>alycecom__Initial_Gift_Invitation_Sent_Date__c</fullName>
    <description>Alyce Initial Gift Invitation Sent Date</description>
    <inlineHelpText>Alyce Initial Gift Invitation Sent Date</inlineHelpText>
    <label>Initial Gift Invitation Sent Date</label>
    <type>DateTime</type>
</CustomField>