force-app/main/default/objects/Account/fields/alycecom__Most_Recent_Gift_Invitation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>alycecom__Most_Recent_Gift_Invitation_Sent_Date__c</fullName>
    <description>Alyce Most Recent Gift Invitation Sent Date</description>
    <inlineHelpText>Alyce Most Recent Gift Invitation Sent Date</inlineHelpText>
    <label>Most Recent Gift Invitation Sent Date</label>
    <type>DateTime</type>
</CustomField>