force-app/main/default/objects/Account/fields/alycecom__Total_Gifts_Invitations_Sent_to_Account__c.field-meta.xml
<CustomField>
    <fullName>alycecom__Total_Gifts_Invitations_Sent_to_Account__c</fullName>
    <description>Alyce Total Gifts Invitations Sent to Account</description>
    <inlineHelpText>Alyce Total Gifts Invitations Sent to Account</inlineHelpText>
    <label>Total Gifts Invitations Sent to Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>