force-app/main/default/objects/Account/fields/AM_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Assignment_Status__c</fullName>
    <description>Identifies if Account Manager assigned is permanent or temporary. Accounts with a Temporary Account Manager designation will be assigned to a new Sales Associate.</description>
    <inlineHelpText>Identifies if Account Manager assigned is permanent or temporary. Accounts with a Temporary Account Manager designation will be assigned to a new Sales Associate.</inlineHelpText>
    <label>AM Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Account Manager</fullName>
            </value>
            <value>
                <fullName>Temporary Account Manager</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>