force-app/main/default/objects/Account/fields/AssociatedTerminusAccounts__c.field-meta.xml
<CustomField>
    <fullName>AssociatedTerminusAccounts__c</fullName>
    <inlineHelpText>These are the accounts in Terminus that are matched to this Salesforce account.</inlineHelpText>
    <label>Associated Terminus Accounts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>