force-app/main/default/objects/Account/fields/AssociatedTerminusAccountsUpToDateAsOf__c.field-meta.xml
<CustomField>
    <fullName>AssociatedTerminusAccountsUpToDateAsOf__c</fullName>
    <label>Associated Accounts - As of</label>
    <type>Date</type>
</CustomField>