force-app/main/default/objects/Account/fields/CWS_Access_to_CW_University__c.field-meta.xml
<CustomField>
    <fullName>CWS_Access_to_CW_University__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that Account is to be provided access to CW University.</inlineHelpText>
    <label>Access to CW University?</label>
    <type>Checkbox</type>
</CustomField>