force-app/main/default/objects/Account/fields/CWS_Access_to_CW_University_Granted__c.field-meta.xml
<CustomField>
    <fullName>CWS_Access_to_CW_University_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that access to CW University has been granted for this Account.</inlineHelpText>
    <label>Access to CW University Granted</label>
    <type>Checkbox</type>
</CustomField>