force-app/main/default/objects/Account/fields/CWS_Account_Owner_Is_Running_User__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Owner_Is_Running_User__c</fullName>
    <description>Used to filter reports.  As of 5-18-2021 this was not a standard supported feature. Knowledge Article Number 000338834</description>
    <formula>if(OwnerId = $User.Id,1,0)</formula>
    <label>Account Owner Is Running User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>