force-app/main/default/objects/Account/fields/CWS_Account_Restriction_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Restriction_Status__c</fullName>
    <inlineHelpText>Identifies if the Account requires additional validations or review. Reasons requiring restriction could be due to payment issues, lack of business, or other concerns.</inlineHelpText>
    <label>Account Restriction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Restriction</fullName>
                <default>true</default>
                <label>No Restriction</label>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Payment Workout</fullName>
            </value>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
            <value>
                <fullName>Shut Off</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Inactive Acquired</fullName>
            </value>
            <value>
                <fullName>Inactive Gone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>