force-app/main/default/objects/Account/fields/CWS_Account_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Review_Status__c</fullName>
    <inlineHelpText>Indicates if an Account has been reviewed by the Master Data Team. &quot;Prospect&quot; Accounts have not been reviewed. &quot;In Review&quot; Accounts are actively being reviewed. &quot;Active&quot; Accounts have been reviewed and specific fields have been locked to prevent changes.</inlineHelpText>
    <label>Account Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>