force-app/main/default/objects/Account/fields/CWS_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Team__c</fullName>
    <label>Account Team</label>
    <length>75</length>
    <type>Text</type>
</CustomField>