force-app/main/default/objects/Account/fields/CWS_Account_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Unique_Identifier__c</fullName>
    <description>Used as unique identifier for all the Accounts</description>
    <displayFormat>ACT-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Account Unique Identifier</label>
    <type>AutoNumber</type>
</CustomField>