force-app/main/default/objects/Account/fields/CWS_Additional_Emails_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Emails_for_Invoice__c</fullName>
    <inlineHelpText>Captures email addresses that can be added to invoices involving this Account record.</inlineHelpText>
    <label>Additional Emails for Invoice</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>