force-app/main/default/objects/Account/fields/CWS_AgreementStatus__c.field-meta.xml
<CustomField>
    <fullName>CWS_AgreementStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to Capture the Agreement status at the Acount level as a Overall (MSA/NDA/BA)</description>
    <inlineHelpText>Captures the Agreement status at the Acount level at an overall level (MSA/NDA/BA).</inlineHelpText>
    <label>AgreementStatus</label>
    <type>Checkbox</type>
</CustomField>