force-app/main/default/objects/Account/fields/CWS_Associate_AM__c.field-meta.xml
<CustomField>
    <fullName>CWS_Associate_AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate Account Manager - Inbound value to be populated from the Account Team of an Account. This is being done via a PB</description>
    <inlineHelpText>Associate Account Manager - Inbound value to be populated from the Account Team of an Account</inlineHelpText>
    <label>Associate AM - Inbound</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>