force-app/main/default/objects/Account/fields/CWS_Authorized_Reseller__c.field-meta.xml
<CustomField>
    <fullName>CWS_Authorized_Reseller__c</fullName>
    <inlineHelpText>Identifies whether ConnectWise has authorized this reseller to participate in &quot;2-Tier&quot; only or &quot;1-Tier&quot; and &quot;2-Tier&quot; deals.</inlineHelpText>
    <label>Authorized Reseller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-Tier Authorized</fullName>
            </value>
            <value>
                <fullName>1-Tier/2-Tier Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>