force-app/main/default/objects/Account/fields/CWS_Auto_Convert_Lead__c.field-meta.xml
<CustomField>
    <fullName>CWS_Auto_Convert_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if Partner Community users associated to this Account can create Leads that auto-convert into Opportunities.</inlineHelpText>
    <label>Auto Convert Lead</label>
    <type>Checkbox</type>
</CustomField>