force-app/main/default/objects/Account/fields/CWS_BA_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_BA_Agreement_Status__c</fullName>
    <label>BA Agreement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>