force-app/main/default/objects/Account/fields/CWS_Billing_Batch__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Batch__c</fullName>
    <description>Use to capture the Billing Batch for any Account.</description>
    <inlineHelpText>Captures the the Billing Batch for any Account.</inlineHelpText>
    <label>Billing Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch1</fullName>
                <default>true</default>
                <label>Batch1</label>
            </value>
            <value>
                <fullName>Batch2</fullName>
            </value>
            <value>
                <fullName>Batch3</fullName>
            </value>
            <value>
                <fullName>Batch4</fullName>
            </value>
            <value>
                <fullName>Batch5</fullName>
            </value>
            <value>
                <fullName>Batch6</fullName>
            </value>
            <value>
                <fullName>Batch7</fullName>
            </value>
            <value>
                <fullName>Batch8</fullName>
            </value>
            <value>
                <fullName>Batch9</fullName>
            </value>
            <value>
                <fullName>Batch10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>