force-app/main/default/objects/Account/fields/CWS_CMS_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_CMS_Group_Id__c</fullName>
    <label>CMS Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>