force-app/main/default/objects/Account/fields/CWS_Denied_Party_Screening__c.field-meta.xml
<CustomField>
    <fullName>CWS_Denied_Party_Screening__c</fullName>
    <description>Captures Denied Party Screening status from Descartes.</description>
    <inlineHelpText>Captures Denied Party Screening status from Descartes.</inlineHelpText>
    <label>Denied Party Screening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Needs Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>