force-app/main/default/objects/Account/fields/CWS_Disti_Logic__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disti_Logic__c</fullName>
    <inlineHelpText>Identifies the Account as part of a group of Distributors and thus should have access to modify the Distributor Community Group values on the Distributor/Reseller object.</inlineHelpText>
    <label>Disti Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingram Micro</fullName>
            </value>
            <value>
                <fullName>Synnex</fullName>
            </value>
            <value>
                <fullName>TechData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>