force-app/main/default/objects/Account/fields/CWS_Distributor_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_Identifier__c</fullName>
    <inlineHelpText>Utilized as an indicator for email notifications that need to be sent to the Distributor users related to this Account.</inlineHelpText>
    <label>Distributor Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Preferred_Distributor</valueSetName>
    </valueSet>
</CustomField>