force-app/main/default/objects/Account/fields/CWS_Distributor_Logic_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_Logic_Exclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked on an account will exclude the quotes related to this account with normal distributor calculation logic. Instead of the disti factor getting applied before an additional discount, the disti factor will be applied after an additional discount.</description>
    <inlineHelpText>ConnectWise send the Order Form to the end user first.</inlineHelpText>
    <label>Partner-to-Disty OF</label>
    <type>Checkbox</type>
</CustomField>