force-app/main/default/objects/Account/fields/CWS_Do_Not_Merge__c.field-meta.xml
<CustomField>
    <fullName>CWS_Do_Not_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is added to make sure account is not merged with the possible duplicate</description>
    <inlineHelpText>This field is added to make sure account is not merged with the possible duplicate</inlineHelpText>
    <label>Do Not Merge</label>
    <type>Checkbox</type>
</CustomField>