force-app/main/default/objects/Account/fields/CWS_Established_Disti_Reseller__c.field-meta.xml
<CustomField>
    <fullName>CWS_Established_Disti_Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Validate that when the first Quote is accepted that the Disti/Reseller account is stamped on the End Customer Account in the &quot;Established Disti/Reseller&quot; field</description>
    <label>Established Disti/Reseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>