force-app/main/default/objects/Account/fields/CWS_Group_Billing_Activated__c.field-meta.xml
<CustomField>
    <fullName>CWS_Group_Billing_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this Account&apos;s group is enabled to receive discounted group pricing.</inlineHelpText>
    <label>Group Billing Activated?</label>
    <type>Checkbox</type>
</CustomField>