force-app/main/default/objects/Account/fields/CWS_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Group_Name__c</fullName>
    <inlineHelpText>Indicates the Groups available for selection to determine the Group Billing.</inlineHelpText>
    <label>Group Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+ Chnl Dev Other</fullName>
            </value>
            <value>
                <fullName>A+ Chnl Dev Other_HTG</fullName>
            </value>
            <value>
                <fullName>A+ HTG</fullName>
            </value>
            <value>
                <fullName>A+ MSP501</fullName>
            </value>
            <value>
                <fullName>A+ RobinRobins</fullName>
            </value>
            <value>
                <fullName>Advanced Productivity Computing</fullName>
            </value>
            <value>
                <fullName>All Covered</fullName>
            </value>
            <value>
                <fullName>ARCA (Zenith)</fullName>
            </value>
            <value>
                <fullName>AServer (Zenith)</fullName>
            </value>
            <value>
                <fullName>AWD</fullName>
            </value>
            <value>
                <fullName>BDR Eval (Zenith)</fullName>
            </value>
            <value>
                <fullName>BPCA</fullName>
            </value>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>CloudComputing (Zenith)</fullName>
            </value>
            <value>
                <fullName>CMIT Terminated</fullName>
            </value>
            <value>
                <fullName>Continuum Vault</fullName>
            </value>
            <value>
                <fullName>CT Group</fullName>
            </value>
            <value>
                <fullName>CT Group - Terminated</fullName>
            </value>
            <value>
                <fullName>Empower</fullName>
            </value>
            <value>
                <fullName>Expetec Group</fullName>
            </value>
            <value>
                <fullName>Expetec-Terminated</fullName>
            </value>
            <value>
                <fullName>GAP</fullName>
            </value>
            <value>
                <fullName>GAP_BPCA</fullName>
            </value>
            <value>
                <fullName>GAP_CDA</fullName>
            </value>
            <value>
                <fullName>GAP_PRO Dealer Group</fullName>
            </value>
            <value>
                <fullName>GAP_ProSource Technology Solutions</fullName>
            </value>
            <value>
                <fullName>Geeks On Call</fullName>
            </value>
            <value>
                <fullName>High Touch Technologies</fullName>
            </value>
            <value>
                <fullName>HTG Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>