force-app/main/default/objects/Account/fields/CWS_HIPAAAccount__c.field-meta.xml
<CustomField>
    <fullName>CWS_HIPAAAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the account has signed a HIPAA agreement</description>
    <label>HIPAA Account</label>
    <type>Checkbox</type>
</CustomField>