force-app/main/default/objects/Account/fields/CWS_HL_Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_HL_Mod_Date__c</fullName>
    <description>In order to trigger the Periodic Refresh of the records for specified fields in the WFR for the Higher Logic Virtual Community Management</description>
    <inlineHelpText>In order to trigger the Periodic Refresh of the records for specified fields in the WFR for the Higher Logic Virtual Community Management</inlineHelpText>
    <label>HL_Mod_Date</label>
    <type>DateTime</type>
</CustomField>