force-app/main/default/objects/Account/fields/CWS_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_Integration_Error__c</fullName>
    <description>This field will be used by Dell Boomi team to stamp any error in integration.</description>
    <inlineHelpText>Indicates issues with Account integrations between Salesforce and NetSuite. If there is any issue with an Account related integration the corresponding error message is populated in this field.</inlineHelpText>
    <label>NetSuite Integration Error</label>
    <type>TextArea</type>
</CustomField>