force-app/main/default/objects/Account/fields/CWS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Integration_Status__c</fullName>
    <description>Field will be used to capture integration status, Will be marked for ready in case of changes in certain fields.</description>
    <inlineHelpText>Captures integration status and the field value will be &quot;Ready For Sync&quot; if there are changes to certain fields on the Account.</inlineHelpText>
    <label>Integration Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready For Sync</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>