force-app/main/default/objects/Account/fields/CWS_Invoice_Delivery_Preference__c.field-meta.xml
<CustomField>
    <fullName>CWS_Invoice_Delivery_Preference__c</fullName>
    <description>Use to capture the Delivery Preference for the Invoice such as Email, Print or both</description>
    <inlineHelpText>Indicates the Account&apos;s delivery preference for the invoice such as via Email, Print, or both.</inlineHelpText>
    <label>Invoice Delivery Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Email and Print</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>