force-app/main/default/objects/Account/fields/CWS_Is_Distributor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the Account is a Distributor. If the field is checked as &quot;true&quot; then the Account is considered a Distributor.</inlineHelpText>
    <label>Is Distributor?</label>
    <type>Checkbox</type>
</CustomField>