force-app/main/default/objects/Account/fields/CWS_Is_IIT_Reseller__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_IIT_Reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the Account is an IIT Reseller. If the field is checked as &quot;true&quot; then the Account is considered an IIT Reseller.</inlineHelpText>
    <label>Is IIT Reseller?</label>
    <type>Checkbox</type>
</CustomField>