force-app/main/default/objects/Account/fields/CWS_Is_Partner__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the Account has accepted a Quote from ConnectWise. If the field is checked as &quot;true&quot; then the Account has accepted a Quote and is considered a ConnectWise Partner.</inlineHelpText>
    <label>Is Partner?</label>
    <type>Checkbox</type>
</CustomField>