force-app/main/default/objects/Account/fields/CWS_IsCustomerFreezed__c.field-meta.xml
<CustomField>
    <fullName>CWS_IsCustomerFreezed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Customer Freeze?</description>
    <label>Customer Freezed?</label>
    <type>Checkbox</type>
</CustomField>