force-app/main/default/objects/Account/fields/CWS_IT_Support_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_IT_Support_Portal_ID__c</fullName>
    <inlineHelpText>Captures Partner Login ID for IT Support Portal.</inlineHelpText>
    <label>IT Support Portal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>