force-app/main/default/objects/Account/fields/CWS_Legacy_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Account_ID__c</fullName>
    <description>Used for the reference of the Legacy Data.</description>
    <externalId>true</externalId>
    <inlineHelpText>References the Account ID used for the Account data from the legacy system. If there was an equivalent Account record in an old system the previous Account ID is captured in this field.</inlineHelpText>
    <label>Legacy Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>