force-app/main/default/objects/Account/fields/CWS_Legacy_Brightgauge_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Brightgauge_Account_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Legacy Hubspot system-assigned Account ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Hubspot system-assigned Account ID.</inlineHelpText>
    <label>Legacy Brightgauge Account ID</label>
    <length>75</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>