force-app/main/default/objects/Account/fields/CWS_Legacy_R1Soft_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_R1Soft_Identifier__c</fullName>
    <inlineHelpText>Captures Legacy Identifier for R1Soft Accounts.</inlineHelpText>
    <label>Legacy R1Soft Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>