force-app/main/default/objects/Account/fields/CWS_Legacy_Salesforce_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Salesforce_Account_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>References the Account ID used for the Account data from the legacy Salesforce system. If there was an equivalent Account record in the old Salesforce system the previous Account ID is captured in this field.</inlineHelpText>
    <label>Legacy Salesforce Account ID (18)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>