force-app/main/default/objects/Account/fields/CWS_Legacy_Smileback__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Smileback__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Legacy Smileback Account ID from Zendesk</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Smileback Account ID from Zendesk</inlineHelpText>
    <label>Legacy Smileback Account Id</label>
    <length>75</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>