force-app/main/default/objects/Account/fields/CWS_Legacy_Zuora_account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Zuora_account_ID__c</fullName>
    <description>To store the Zuora account ID</description>
    <label>Legacy Zuora account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>