force-app/main/default/objects/Account/fields/CWS_Manage_Company_Rec_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Company_Rec_Id__c</fullName>
    <description>to hold Manage Reference Ids</description>
    <label>Manage Company Rec Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>