force-app/main/default/objects/Account/fields/CWS_Manage_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Integration_Error__c</fullName>
    <label>Manage Integration Error</label>
    <type>TextArea</type>
</CustomField>