force-app/main/default/objects/Account/fields/CWS_Manage_Integration_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Integration_Sync_Status__c</fullName>
    <label>Manage Integration Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Sync</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>