force-app/main/default/objects/Account/fields/CWS_Manage_Required__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Required</label>
    <type>Checkbox</type>
</CustomField>