force-app/main/default/objects/Account/fields/CWS_Min_Commit_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Min_Commit_Sync_Status__c</fullName>
    <label>Min Commit Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Ready to sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>